--- a/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
+++ b/crsorgi.gov.in/web/index.php/auth/birthCertificate/view/cert/B/ZGtDZlZNT1Y4WkZGbXN6a25MM1V5Zz09==.html
@@ -833,7 +833,7 @@ show5();
 																														
 															<span lang="hi"> जन्म तिथि </span>/ 
 																														Date of Birth:
-															<br/>05-06-2005													<br/>FIVE-june-TWO-THOUSAND-five
+															<br/>15-06-2005													<br/>FIFTEEN-june-TWO-THOUSAND-five
 
                                                           </td>
                                                           <td></td>
@@ -1057,7 +1057,7 @@ show5();
 													<tr>
                                                             <!--// Added by Anupam 02-05-2016 at 5:30 PM for Qrcode integration (end)-->
 															<td align="left" valign="top">
-                                                                <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=;https:/3.qrcodec/PROD/642770c15debf642c14f64e5/fm/crresorgi_32dddd.pdf?v=1681756636567qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"
+                                                                <img src="http://api.qrserver.com/v1/create-qr-code/?color=000000&amp;bgcolor=FFFFFF&amp;data=;https://cdn03.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/chandan_kumar.pdf?v=1686310969505qzone=1&amp;margin=0&amp;size=400x400&amp;ecc=L"
                                                                 style="width: 80px;  height: 80px;">                                                          </td>
 														   <!--// Added by Anupam 02-05-2016 at 5:30 PM for Qrcode integration (end)-->
 														   
@@ -1146,7 +1146,7 @@ show5();
                                                         <td>&nbsp;</td>-->
 
                           <td class="btn">
-                            <a class="btn" target="_blank" href=https://cdn03.qrcodechimp.com636567/print">Print</a>                          </td>
+                            <a class="btn" target="_blank" href=https://cdn03.qrcodechimp.com/qr/PROD/642770c15debf642c14f64e5/fm/chandan_kumar.pdf?v=1686310969505/print">Print</a>                          </td>
                           <td>&nbsp;</td>
                           <td class="btn">
                             <input class="btn" value="Home" type="button" onclick="document.location.href='https://crsorgi.gov.in/web/index.php/';" />                          </td>
